# edu-plan-002-supabase

./: README.md
app/app-flet/: README.md  config.py  main.py  pyproject.toml
app/app-react/: package.json  pnpm-lock.yaml
app/app-react/src/: App.tsx
app/app-react/src-tauri/: Cargo.toml  tauri.conf.json
app/app-react/src-tauri/src/: main.rs
app/app-svelte/: package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
app/app-svelte/src-tauri/: Cargo.toml  tauri.conf.json
app/app-svelte/src-tauri/src/: main.rs
app/app-svelte/src/lib/: config.ts
app/app-svelte/src/routes/: +layout.svelte  +page.svelte
app/app-svelte/src/types/: svelte-icons.d.ts
app/app_flutter/: README.md  pubspec.yaml
app/app_flutter/lib/: config.dart  main.dart
supabase-setting/: README.md
