[project]
name = "app-flet"
version = "0.1.0"
description = ""
authors = [
    {name = "N-JY",email = "107910868+WarRagon@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "flet (>=0.25.2,<0.26.0)",
    "supabase (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "pydantic[email] (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
